# mcp-pr-pilot

./: .gitignore  README.md  pyproject.toml
src/mcp_pr_pilot/: __init__.py  __main__.py  descriptions.py  diff_types.py  instructions.py  schemas.py  server.py  services.py  tools.py
