[project]
name = "mcp-server-pr-pilot"
version = "0.1.0"
description = "MCP server that provides git diff output and summarization instructions for pull request descriptions."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["git", "diff", "summarizer", "mcp", "pull request"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp>=1.1.3",
    "pydantic>=2.0.0",
    "ruff>=0.11.6",
]

[project.scripts]
mcp-server-pr-pilot = "mcp_pr_pilot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_pr_pilot"] 
